--- a/index.html
+++ b/index.html
@@ -642,16 +642,16 @@
                                         <div class="card p-2 rounded-4"
                                             style="background-color: rgba(137, 16, 20, 0.07);">
                                             <div class="card-body">
-                                                <div class="row align-items-center">
-                                                    <!-- Icon column -->
+                                                <div class="row d-flex flex-column flex-lg-row align-items-center">
+                                                    <!-- Icon first on mobile, last on large screens -->
                                                     <div
-                                                        class="col-lg-3 d-flex justify-content-center align-items-center px-5 order-1 order-lg-2">
+                                                        class="col-lg-3 d-flex justify-content-center align-items-center order-1 order-lg-2 px-3 mb-3 mb-lg-0">
                                                         <i class="bi bi-patch-check"
                                                             style="font-size: 5rem; color:#891014;"></i>
                                                     </div>
-
-                                                    <!-- Text column -->
-                                                    <div class="col-lg-9 px-5 order-2 order-lg-1">
+                                                    <!-- Text second on mobile, first on large screens -->
+                                                    <div
+                                                        class="col-lg-9 order-2 order-lg-1 px-3 text-center text-lg-start pb-4">
                                                         <h5 class="fw-semibold textstart">Centralized Operations Center
                                                         </h5>
                                                         <p class="fw-light fs-6  text-justify-mobile"
