--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-4 d-flex justify-content-start">
-                                    <img src="assets/img/group.png" alt="Banner Preview" class="img-fluid"
+                                    <img src="assets/img/Group.png" alt="Banner Preview" class="img-fluid"
                                         style="max-width: 55px;">
                                 </div>
                                 <div class="col-8 text-end">
